menambahkan semua yg kurah ah capek
