# app/router/dataPenyuluh.js
@@ -5,10 +5,14 @@ const {
   tambahDataPenyuluh,
   presensiKehadiran,
   jurnalKegiatan,
-  RiwayatChat
+  RiwayatChat,
+  tambahJurnalKegiatan,
+  tambahPresensiKehadiran
 } = require('../controllers/dataPenyuluh');
 
 router.post('/penyuluh/add', upload.single('foto') ,tambahDataPenyuluh);
+router.post('/presensi-kehadiran/add', tambahPresensiKehadiran);
+router.post('/jurnal-kegiatan/add',upload.single('gambar'), tambahJurnalKegiatan);
 router.get('/presensi-kehadiran', presensiKehadiran);
 router.get('/jurnal-kegiatan', jurnalKegiatan);
 router.get('/riwayat-chat', RiwayatChat);
